Fixed Navbar
- Added link to search page
- Added link to location page
- Fixed city
- Fixed minor bug with city overlapping logo

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -14,3 +14,19 @@
     width: auto;
     display: inline-block;
 }
+
+.header-icons {
+    padding: 0 5px;
+    font-size: 1.1em;
+}
+
+@media screen and (max-width: 600px) {
+    .hidden-xxs {
+        display: none;
+    }
+
+    .header-icons {
+        padding: 0;
+        font-size: 1em;
+    }
+}
